// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`regression tests Drags selected element when hitting only bounding box and keeps element selected: [end of test] appState 1`] = `
Object {
  "activeTool": Object {
    "customType": null,
    "lastActiveToolBeforeEraser": null,
    "locked": false,
    "type": "selection",
  },
  "collaborators": Map {},
  "currentChartType": "bar",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "hachure",
  "currentItemFontFamily": 1,
  "currentItemFontSize": 20,
  "currentItemLinearStrokeSharpness": "round",
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#000000",
  "currentItemStrokeSharpness": "sharp",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeWidth": 1,
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "draggingElement": null,
  "editingElement": null,
  "editingGroupId": null,
  "editingLinearElement": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "gridSize": null,
  "height": 768,
  "isBindingEnabled": true,
  "isLoading": false,
  "isResizing": false,
  "isRotating": false,
  "isSidebarDocked": false,
  "lastPointerDownWith": "mouse",
  "multiElement": null,
  "name": "Untitled-201933152653",
  "offsetLeft": 0,
  "offsetTop": 0,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "pasteDialog": Object {
    "data": null,
    "shown": false,
  },
  "penDetected": false,
  "penMode": false,
  "pendingImageElementId": null,
  "previousSelectedElementIds": Object {},
  "resizingElement": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "selectedElementIds": Object {
    "id0": true,
    "id1": true,
  },
  "selectedGroupIds": Object {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showStats": false,
  "showWelcomeScreen": true,
  "startBoundElement": null,
  "suggestedBindings": Array [],
  "theme": "light",
  "toast": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 1024,
  "zenModeEnabled": false,
  "zoom": Object {
    "value": 1,
  },
}
`;

exports[`regression tests Drags selected element when hitting only bounding box and keeps element selected: [end of test] element 0 1`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "fillStyle": "hachure",
  "groupIds": Array [],
  "height": 15,
  "id": "id0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "seed": 337897,
  "strokeColor": "#000000",
  "strokeSharpness": "sharp",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "ellipse",
  "updated": 1,
  "version": 3,
  "versionNonce": 453191,
  "width": 15,
  "x": 10,
  "y": 10,
}
`;

exports[`regression tests Drags selected element when hitting only bounding box and keeps element selected: [end of test] history 1`] = `
Object {
  "recording": false,
  "redoStack": Array [],
  "stateHistory": Array [
    Object {
      "appState": Object {
        "editingGroupId": null,
        "editingLinearElement": null,
        "name": "Untitled-201933152653",
        "selectedElementIds": Object {},
        "selectedGroupIds": Object {},
        "viewBackgroundColor": "#ffffff",
      },
      "elements": Array [],
    },
    Object {
      "appState": Object {
        "editingGroupId": null,
        "editingLinearElement": null,
        "name": "Untitled-201933152653",
        "selectedElementIds": Object {
          "id0": true,
        },
        "selectedGroupIds": Object {},
        "viewBackgroundColor": "#ffffff",
      },
      "elements": Array [
        Object {
          "angle": 0,
          "backgroundColor": "transparent",
          "boundElements": null,
          "fillStyle": "hachure",
          "groupIds": Array [],
          "height": 10,
          "id": "id0",
          "isDeleted": false,
          "link": null,
          "locked": false,
          "opacity": 100,
          "roughness": 1,
          "seed": 337897,
          "strokeColor": "#000000",
          "strokeSharpness": "sharp",
          "strokeStyle": "solid",
          "strokeWidth": 1,
          "type": "ellipse",
          "updated": 1,
          "version": 2,
          "versionNonce": 1278240551,
          "width": 10,
          "x": 0,
          "y": 0,
        },
      ],
    },
    Object {
      "appState": Object {
        "editingGroupId": null,
        "editingLinearElement": null,
        "name": "Untitled-201933152653",
        "selectedElementIds": Object {
          "id0": true,
          "id1": true,
        },
        "selectedGroupIds": Object {},
        "viewBackgroundColor": "#ffffff",
      },
      "elements": Array [
        Object {
          "angle": 0,
          "backgroundColor": "transparent",
          "boundElements": null,
          "fillStyle": "hachure",
          "groupIds": Array [],
          "height": 15,
          "id": "id0",
          "isDeleted": false,
          "link": null,
          "locked": false,
          "opacity": 100,
          "roughness": 1,
          "seed": 337897,
          "strokeColor": "#000000",
          "strokeSharpness": "sharp",
          "strokeStyle": "solid",
          "strokeWidth": 1,
          "type": "ellipse",
          "updated": 1,
          "version": 3,
          "versionNonce": 453191,
          "width": 15,
          "x": 10,
          "y": 10,
        },
      ],
    },
  ],
}
`;

exports[`regression tests Drags selected element when hitting only bounding box and keeps element selected: [end of test] number of elements 1`] = `1`;

exports[`regression tests Drags selected element when hitting only bounding box and keeps element selected: [end of test] number of renders 1`] = `12`;
